--- a/package.json
+++ b/package.json
@@ -11,9 +11,16 @@
     "@chakra-ui/react": "^1.3.4",
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
+    "@prisma/client": "^2.23.0",
+    "bcrypt": "^5.0.1",
     "framer-motion": "^3.10.0",
     "next": "^10.0.0",
+    "next-auth": "^3.23.3",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-icons": "^4.2.0"
+  },
+  "devDependencies": {
+    "prisma": "^2.23.0"
   }
 }
