--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^3.10.0",
     "next": "^10.0.0",
     "next-auth": "^3.23.3",
+    "random-avatar-generator": "^2.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^4.2.0",
