--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "@chakra-ui/react": "^1.3.4",
@@ -14,7 +15,7 @@
     "@prisma/client": "^2.23.0",
     "bcrypt": "^5.0.1",
     "framer-motion": "^3.10.0",
-    "next": "^10.0.0",
+    "next": "^11.1.2",
     "next-auth": "^3.23.3",
     "random-avatar-generator": "^2.0.0",
     "react": "17.0.1",
@@ -23,6 +24,21 @@
     "yup": "^0.32.9"
   },
   "devDependencies": {
-    "prisma": "^2.23.0"
+    "@types/react": "^17.0.20",
+    "@typescript-eslint/eslint-plugin": "^4.31.0",
+    "@typescript-eslint/parser": "^4.31.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.25.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "prettier": "^2.4.0",
+    "prettier-eslint": "^13.0.0",
+    "prettier-eslint-cli": "^5.0.1",
+    "prisma": "^2.23.0",
+    "typescript": "^4.4.3"
   }
 }
